# cherimoya

./: .gitignore  .readthedocs.yml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish-container.yaml
cherimoya/: __init__.py  cheri.py  cherimoya.py  io.py  losses.py  performance.py  wrappers.py
cherimoya_cli/: __init__.py  __main__.py  defaults.py  utils.py
cherimoya_cli/commands/: __init__.py  attribute.py  batch.py  evaluate.py  fit.py  install_skill.py  marginalize.py  negatives.py  pipeline.py  pipeline_json.py  seqlets.py
cherimoya_cli/skills/cherimoya/: SKILL.md
cherimoya_cli/skills/cherimoya/references/: assay-defaults.md  cli-training-pipeline.md  cli.md  concepts.md  input-files.md  interpreting-outputs.md  troubleshooting.md  using-in-python.md  using-tangermeme.md
docs/: CHANGELOG.rst  architecture.rst  benchmarks.rst  cli.rst  conf.py  development.rst  glossary.rst  index.rst  installation.rst  multi_task.rst  quickstart.rst  troubleshooting.rst
docs/api/: cheri.rst  io.rst  losses.rst  model.rst  wrappers.rst
docs/recipes/: atacseq.rst  chipseq_tf.rst  differential.rst  dnaseq.rst
docs/tutorials/: attribution.rst  cli_pipeline.rst  python_api.rst  save_load.rst  variant_effect.rst
tests/: conftest.py  test_cheri.py  test_cli_utils.py  test_compile.py  test_ema.py  test_evaluate_cli.py  test_fit_wiring.py  test_install_skill.py  test_io.py  test_losses.py  test_model.py  test_performance.py  test_wrappers.py
